# LeadGenPro

./: README.md  gmail.py  lawyer_los_angeles_county_contact_info.csv  main.py  pyproject.toml  saunas_los_angeles_county_contact_info.csv  scraper.py  urls_and_emails_pandas.csv
leadgenpro/: __init__.py  __main__.py  api.py  scraper.py
