[tool.poetry]
name = "leadgenpro"
version = "0.1.0"
description = "A professional Lead Generation Tool"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.99.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pydantic = "^1.10.11"
numpy = "1.24.3"
pandas = "2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pylint = "^2.17.4"
mypy = "^1.4.1"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 88
target-version = ['py38'] 